# music_agent

./: .example.env  .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
agent_data/: agent.json  agent_2.json  album_style.json  music_generation_history.json
app_logging/: logger.py
config/: config.py
music_agent/: README.md
music_agent/agent/: README.md  main.py  music_generation_prompt.py  music_graph.py  state.py  sunoapi.py
music_agent/agent/graph/: music_graph.py  prompts.py  sunoapi.py
music_agent/agent/src/: main.py
music_agent/soundcloud/: load_songs_soundcloud.py
music_agent/utils/: llm_utils.py
music_generator/: load_songs_google_drive.py  random_song.py
music_generator/soundcloud/: README.md  load_songs_soundcloud.py  soundcloud_auth.py  soundcloud_upload.py
music_generator/suno_pipeline/: __main__.py  music_generation_prompt.py  music_graph.py  music_history_agent_2.json  state.py  sunoapi.py
news_generator/: README.md  audio_utils.py  example.env  generate_news.py
news_generator/src/: __main__.py  graph.py  prompts.py  state.py  utils.py
utils/: utils.py
